fixing controls styling on mobile

--- a/stylesheets/character.css
+++ b/stylesheets/character.css
@@ -498,6 +498,11 @@ input[type="number"]::-webkit-outer-spin-button {
         text-align: center;
     }
 
+    .controls {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     .controls .button,
     .controls button,
     a.button {
